# Mia

./: .eslintrc  Program.cs  baburao-apte-42819cd377d5.json  config.py  credentials.json  g_auth.txt  gsheet.py  index.html  keep_alive.py  main.js  main.min.js  main.py  pyproject.toml  pyproject.toml.txt  requirements.txt  style.css
.github/workflows/: config.py  requirements.txt
cogs/: fun.py  utils.py
static/js/: main.min.js
