[tool.poetry]
name = "repl_python3_Mia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
discord = "^1.7.3"
requests = "2.25.1"
future = "^0.18.2"
google-api-python-client = "^2.11.0"
google-auth-oauthlib = "^0.4.4"
pickle4 = "^0.0.1"
Discord-Emotes = "^1.2"
Authlib = "^0.15.4"
git42 = "^2021.1.31"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
